--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0 auto;
+  background: #f8f9ff;
+  font-family: Inter, serif;
+}
