--- a/src/app/features/today/today.component.scss
+++ b/src/app/features/today/today.component.scss
@@ -1,15 +1,35 @@
 .today-container {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-}
-
-xfer2-xfer-data-entry {
+  //align-items: center;
+  justify-content: center;
+  gap: 20px;
   padding: 100px;
 }
 
-xfer2-xfer-data-entry-form {
-  padding: 100px;
+//.input {
+//  align-self: center;
+//}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  gap: 20px;
 }
+
+//xfer2-xfer-data-entry {
+//  width: 70%;
+//}
+//
+//xfer2-xfer-data-entry-form {
+//  width: 70%;
+//
+//}
+//
+//xfer2-data-entry-feedback {
+//  width: 70%;
+//
+//}
 
 
