--- a/src/app/features/xfer-data-entry/xfer-data-entry.component.html
+++ b/src/app/features/xfer-data-entry/xfer-data-entry.component.html
@@ -3,21 +3,21 @@
 
   <div class="user-input">
     <img class="icon" src="assets/phone_in_talk.svg" alt="phone icon">
-    <span class="user-input-text">{{entry.callsTaken}} calls taken</span>
+    <span class="user-input-text">{{entry.callsTaken}} call@if (entry.callsTaken !== 1){s} taken</span>
   </div>
 
   <div class="user-input">
     <img class="icon" src="assets/swap_horiz.svg" alt="transfer icon">
-    <span class="user-input-text">{{entry.callsXfer}} calls transferred</span>
+    <span class="user-input-text">{{entry.callsXfer}} call@if (entry.callsXfer !== 1){s} transferred</span>
   </div>
 
   <div class="calculated-results">
     <div class="xfer-percent">
-      <span> {{ callsXferPercent() }}%<br>transferred</span>
+      <span> {{ callsXferPercent() ?? 0 }}%<br>transferred</span>
     </div>
 
     <div class="is-passing">
-      @if (callsXferPercent() <= 27.00) {
+      @if ((callsXferPercent() ?? 100) <= 27.00) {
         <div class="is-passing-result">
           <img class="is-passing-icon" src="assets/star.svg" width="53" alt="is passing"/>
           <span class="is-passing-text">Above<br>LevelUp!</span>
