--- a/src/app/features/xfer-data-entry-form/xfer-data-entry-form.component.scss
+++ b/src/app/features/xfer-data-entry-form/xfer-data-entry-form.component.scss
@@ -46,8 +46,7 @@ input[type="number"] {
   border: none;
   align-self: stretch;
   border-radius: 20px;
-
-  font-family: Inter, sans-serif;
+  cursor: pointer;
 }
 
 .input-cluster {
