--- a/src/app/features/today/today.component.html
+++ b/src/app/features/today/today.component.html
@@ -1,8 +1,12 @@
 <div class="today-container">
-  <xfer2-xfer-data-entry-form class="input" (valueChanged)="sample = $event"/>
+  <div class="cluster">
+    <div class="input">
+      <xfer2-xfer-data-entry-form class="input" (valueChanged)="sample = $event"/>
+    </div>
 
-  <div class="result">
-    <xfer2-data-entry-feedback [entry]="sample"/>
-    <xfer2-xfer-data-entry [entry]="sample"/>
+    <div class="result">
+      <xfer2-data-entry-feedback [entry]="sample"/>
+      <xfer2-xfer-data-entry [entry]="sample"/>
+    </div>
   </div>
 </div>
