--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="main-header">
   <div>
-    <img class="logo" src="/assets/swap_horiz.svg" alt="logo" aria-hidden="true"/>
+    <img class="logo" src="assets/swap_horiz.svg" alt="logo" aria-hidden="true"/>
   </div>
   <div>
     <h1 class="logo-text">Transfer Tracker</h1>
