--- a/src/app/features/data-entry-feedback/data-entry-feedback.component.scss
+++ b/src/app/features/data-entry-feedback/data-entry-feedback.component.scss
@@ -20,6 +20,8 @@
   align-items: center;
 
   box-shadow: 0 1px 8px 0 rgba(58, 105, 59, 1);
+  font-size: 18px;
+
 
   background: #bbf0b5;
   border-radius: 10px;
