more style ajustments

--- a/src/app/features/xfer-data-entry/xfer-data-entry.component.scss
+++ b/src/app/features/xfer-data-entry/xfer-data-entry.component.scss
@@ -38,6 +38,8 @@
   align-self: normal;
   justify-content: space-evenly;
   padding: 22px;
+  column-gap: 10px;
+  flex-wrap: wrap;
 }
 
 .xfer-percent {
