begin work on history page. add tab selector

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,13 @@ body {
   background: #f8f9ff;
   font-family: Inter, serif;
 }
+
+.main {
+  display: flex;
+  flex-direction: column;
+}
+
+.tab-picker {
+  align-self: center;
+  margin-top: 25px;
+}
