--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
   <a [routerLink]="['/today']">
     <xfer2-header/>
   </a>
+  <div class="tab-picker">
+    <xfer2-tab-picker/>
+  </div>
   <section class="content">
     <router-outlet></router-outlet>
   </section>
