change header font

--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -16,6 +16,6 @@ header {
   width: auto;
   float: left;
   margin-left: 20px;
-  font-family: "Source Sans Pro", serif;
+  font-family: Inter, sans-serif;
   color:#001c39;
 }
