work on database implementation

--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -3,6 +3,7 @@ header {
   height: 90px;
   padding: 5px;
   background-color: #d3e3ff;
+  float-wrap: none;
 }
 
 .logo {
@@ -16,6 +17,6 @@ header {
   width: auto;
   float: left;
   margin-left: 20px;
-  font-family: "Source Sans Pro", serif;
+  font-family: Inter, sans-serif;
   color:#001c39;
 }
