--- a/src/app/features/today/today.component.html
+++ b/src/app/features/today/today.component.html
@@ -1,5 +1,5 @@
 <div class="today-container">
-  <div class="cluster">
+  <div class="main-cluster">
     <div class="input">
       <xfer2-xfer-data-entry-form class="input" (valueChanged)="sample = $event"/>
     </div>
