--- a/src/app/features/today/today.component.scss
+++ b/src/app/features/today/today.component.scss
@@ -4,23 +4,19 @@
   align-items: stretch;
   justify-content: center;
 
-  //padding: 100px;
   padding-top: 35px;
   padding-bottom: 30px;
-  //padding-left: 100px;
-  //padding-right: 100px;
 }
 
-//.input {
-//  align-self: center;
-//}
-
-.cluster {
-  margin-left: 10%;
-  margin-right: 10%;
+.main-cluster {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+
+  gap: 70px;
 }
 
 .result {
