--- a/src/app/features/xfer-data-entry/xfer-data-entry.component.scss
+++ b/src/app/features/xfer-data-entry/xfer-data-entry.component.scss
@@ -38,7 +38,7 @@
   align-self: normal;
   justify-content: space-evenly;
   padding: 22px;
-  column-gap: 10px;
+  gap: 20px;
   flex-wrap: wrap;
 }
 
