enable feedback to randomly generate message

--- a/src/app/features/data-entry-feedback/data-entry-feedback.component.html
+++ b/src/app/features/data-entry-feedback/data-entry-feedback.component.html
@@ -6,7 +6,7 @@
   }
   @else {
     <div class="feedback-positive">
-      <span> {{getPositivePhrase()}} </span>
+      <span> {{this.positivePhrase}} </span>
     </div>
   }
 </div>
