added identity component

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,4 +5,7 @@
   <div>
     <h1 class="logo-text">Transfer Tracker</h1>
   </div>
+  <div class="identity-container">
+    <xfer2-identity/>
+  </div>
 </header>
