--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,22 +1,29 @@
 
-header {
+.main-header {
   height: 90px;
   padding: 5px;
   background-color: #d3e3ff;
-  float-wrap: none;
+
+  display: flex;
+  justify-content: start;
 }
+
 
 .logo {
   width: 80px;
   filter: brightness(0) saturate(100%) invert(11%) sepia(99%) saturate(478%) hue-rotate(165deg) brightness(93%) contrast(109%);
-  float: left;
-  //border: 1px solid red;
 }
+
 
 .logo-text {
   width: auto;
-  float: left;
   margin-left: 20px;
   font-family: Inter, sans-serif;
   color:#001c39;
+}
+
+.identity-container {
+  align-self: center;
+  margin-left: auto;
+  margin-right: 10px;
 }
