show transfers remaining on feedback card

--- a/src/app/features/data-entry-feedback/data-entry-feedback.component.html
+++ b/src/app/features/data-entry-feedback/data-entry-feedback.component.html
@@ -16,7 +16,10 @@
     }
     @else {
       <div class="feedback-positive">
-        <span> {{getCurrentPositivePhrase()}} </span>
+        <span>
+          {{getCurrentPositivePhrase()}}
+          <br><br> You have <b>{{remainingXfers()}}</b> transfers remaining.
+        </span>
       </div>
     }
   }
