--- a/src/app/core/pages/history/history.component.html
+++ b/src/app/core/pages/history/history.component.html
@@ -1,26 +1,24 @@
-<div class="history-container" *ngIf="(history$ | async) as history">
+<div class="history-container" *ngIf="(history$ | async) as cycles">
   <div class="performance">
-    <xfer2-overall-performance class="performance" [entries]="history"/>
+    <xfer2-overall-performance class="performance" [cycles]="cycles"/>
   </div>
 
   <div class="cycles">
-<!--    @let cycles = parseEntriesIntoCycles(history);-->
-
-    @for (cycle of parseEntriesIntoCycles(history); track cycle.start) {
-      <xfer2-scorecard-cycle [cycle]="cycle"/>
+    @for (cycle of cycles; track cycle.start) {
+      <xfer2-scorecard-cycle class="cycle-card" [cycle]="cycle"/>
     }
     @empty {
       <div>There's nothing to show.</div>
     }
   </div>
 
-  <div class="entries">
-    @for (entry of history; track entry.date) {
-      <xfer2-xfer-data-entry class="history-entry" [entry]="entry"/>
-    }
-    @empty {
-      <div>There's nothing to show.</div>
-    }
-  </div>
+<!--  <div class="entries">-->
+<!--    @for (entry of history; track entry.date) {-->
+<!--      <xfer2-xfer-data-entry class="history-entry" [entry]="entry"/>-->
+<!--    }-->
+<!--    @empty {-->
+<!--      <div>There's nothing to show.</div>-->
+<!--    }-->
+<!--  </div>-->
 
 </div>
