--- a/src/app/features/scorecard-cycle/scorecard-cycle.component.scss
+++ b/src/app/features/scorecard-cycle/scorecard-cycle.component.scss
@@ -11,20 +11,45 @@
 }
 
 .cycle-date {
-  text-align: left;
   font-size: 32px;
   align-self: center;
 }
 
 .cycle-icons {
+  display: flex;
   padding: 8px;
 }
 
 .circle {
+  cursor: pointer;
   filter: brightness(0) saturate(100%) invert(8%) sepia(7%) saturate(4587%) hue-rotate(179deg) brightness(94%) contrast(93%);
 }
 
 
 .is-passing-icon {
   filter: brightness(0) saturate(100%) invert(33%) sepia(11%) saturate(2793%) hue-rotate(173deg) brightness(97%) contrast(83%);
+}
+
+.performance-container {
+  display: flex;
+  padding-top: 32px;
+  justify-content: center;
+}
+
+.performance-card {
+  width: 40%;
+  min-width: 300px;
+}
+
+.entry-accordion {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 16px;
+  flex-wrap: wrap;
+}
+
+.entry {
+  padding: 16px;
+  width: 300px;
 }
