--- a/src/app/core/components/identity/identity.component.html
+++ b/src/app/core/components/identity/identity.component.html
@@ -1,19 +1,28 @@
 <dialog (cancel)="userCanceledForm()" class="username-dialog" #usernameDialog>
-  <p>Welcome to Transfer Tracker!</p>
+  <div class="title">
+    Welcome to Transfer Tracker!
+  </div>
+  <div class="version">
+    v2.0.0
+  </div>
   <form method="dialog" (submit)="signInButtonPressed()" class="username-form" [formGroup]="usernameForm">
-    <input class="username-input" [ngClass]="{'input-error': usernameInput.invalid}" formControlName="username" id="username" type="text" placeholder="Enter username..." required>
+    <input class="username-input" [ngClass]="{'input-error': usernameInput.invalid}" formControlName="username" id="username" type="text" placeholder="Enter PID..." required>
     <div class="error-message" *ngIf="usernameInput.invalid">
       Must be more than 4 characters!
     </div>
 
     <div class="dialog-buttons">
+
       <!--mark type as button because we don't want the close button to submit-->
       <button class="dialog-button" type="button" (mouseup)="usernameDialog.close()" [hidden]="hideCloseButton">Close</button>
       <button class="dialog-button" [disabled]="usernameInput.invalid" [ngClass]="{'disabled': usernameInput.invalid}">Sign in</button>
     </div>
 
-    <div class="version">
-      v2.0.0
+    <div class="contact-info">
+      Made by Michael Trenkler <br>
+      <a href="mailto:michael.trenkler1@protonmail.com">
+        michael.trenkler1&#64;protonmail.com <br>
+      </a>
     </div>
   </form>
 </dialog>
