--- a/src/app/core/components/identity/identity.component.scss
+++ b/src/app/core/components/identity/identity.component.scss
@@ -4,6 +4,12 @@
   filter: brightness(0) saturate(100%) invert(11%) sepia(99%) saturate(478%) hue-rotate(165deg) brightness(93%) contrast(109%);
 }
 
+.title {
+  font-size: 16px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+}
+
 .username-dialog {
   box-shadow: 0 2px 2px 0 rgba(243, 243, 250, 1);
   scale: 1.3;
@@ -70,7 +76,16 @@ p,
   color: #ba1a1a ;
 }
 
+.contact-info {
+  justify-self: center;
+  text-align: center;
+  padding-top: 12px;
+  font-size: 8pt;
+}
+
 .version {
   justify-self: left;
+  text-align: left;
   font-size: 8pt;
+  padding-bottom: 8px;
 }
