--- a/src/app/core/pages/history/history.component.html
+++ b/src/app/core/pages/history/history.component.html
@@ -8,17 +8,7 @@
       <xfer2-scorecard-cycle class="cycle-card" [cycle]="cycle"/>
     }
     @empty {
-      <div>There's nothing to show.</div>
+      <div class="empty">There's nothing to show.</div>
     }
   </div>
-
-<!--  <div class="entries">-->
-<!--    @for (entry of history; track entry.date) {-->
-<!--      <xfer2-xfer-data-entry class="history-entry" [entry]="entry"/>-->
-<!--    }-->
-<!--    @empty {-->
-<!--      <div>There's nothing to show.</div>-->
-<!--    }-->
-<!--  </div>-->
-
 </div>
