--- a/src/app/core/components/identity/identity.component.html
+++ b/src/app/core/components/identity/identity.component.html
@@ -3,10 +3,10 @@
     Welcome to Transfer Tracker!
   </div>
   <div class="version">
-    v2.0.0
+    v2.1.0
   </div>
   <form method="dialog" (submit)="signInButtonPressed()" class="username-form" [formGroup]="usernameForm">
-    <input class="username-input" [ngClass]="{'input-error': usernameInput.invalid}" formControlName="username" id="username" type="text" placeholder="Enter PID..." required>
+    <input class="username-input" [ngClass]="{'input-error': usernameInput.invalid}" formControlName="username" id="username" type="text" placeholder="Enter a username..." required>
     <div class="error-message" *ngIf="usernameInput.invalid">
       Must be more than 4 characters!
     </div>
@@ -18,6 +18,10 @@
       <button class="dialog-button" [disabled]="usernameInput.invalid" [ngClass]="{'disabled': usernameInput.invalid}">Sign in</button>
     </div>
 
+<!--    <div class="contact-info">-->
+<!--      Contact Me-->
+<!--      <img src="assets/keyboard_arrow_down.svg" width="15">-->
+<!--    </div>-->
     <div class="contact-info">
       Made by Michael Trenkler <br>
       <a href="mailto:michael.trenkler1@protonmail.com">
